[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathfinder-sdk"
version = "0.1.0"
description = "Local ranking engine for AI navigation agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shaun Myandee", email = "shaun@wayfinder.ai"},
]
keywords = ["ai", "navigation", "ranking", "embeddings", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "onnxruntime>=1.16.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.0.0,<3.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "curl-cffi>=0.6.0",
    "beautifulsoup4>=4.12.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
mac = ["coremltools>=7.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/ShaunM89/wayfinder-pathfinder-sdk"
Repository = "https://github.com/ShaunM89/wayfinder-pathfinder-sdk"
Issues = "https://github.com/ShaunM89/wayfinder-pathfinder-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pathfinder_sdk"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D101", "D102", "D103", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
    "prometheus_client.*",
    "playwright.*",
    "yaml",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
